Fix image overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+:root{
+    --gray:  #5f6366;
+}
+
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
@@ -5,7 +12,6 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 
 
@@ -16,3 +22,15 @@ body {
     font-size: 1rem;
 }
 
+
+/* Tags
+--------*/
+
+hr{
+    background:  var(--gray);
+    margin-top:1.5rem;
+}
+
+img{
+    max-width: 100%;
+}
